# Online_Exam_System_Group_8

./: .gitignore  Makefile  app.py  config.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: base.html  create_exam.html  edit_exam.html
instance/: exams.db
migrations/versions/: 193d3f23bea8_.py  3670f8aef675_initial_models.py  67c60d59cbf9_.py  6ed53eae9ea1_create_exams_table.py  add_questions_table.py  add_submissions_table.py  b5feba8e4925_.py  cf2b5a61c144_scheduleexam.py
models/: exam.py  user.py
routes/: auth_routes.py  exam_routes.py
src/agile_ci_demo/: app.py
src/agile_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/online_exam/: __init__.py  config.py
src/online_exam/models/: __init__.py  exam.py  login_attempt.py  password_reset_token.py  question.py  submission.py  user.py
tests/: conftest.py  test_add_question.py  test_app.py  test_auth_login.py  test_auth_register.py  test_auth_reset.py  test_auto_grade_mcq.py  test_create_exam.py  test_edit_delete_question.py  test_edit_exam.py  test_exam_instruction_richtext.py  test_exam_preview.py  test_grade_status.py  test_header_navigation.py  test_list_exams.py  test_list_questions.py  test_login_attempt_logging.py  test_login_attempts_page.py  test_manual_grade.py  test_performance_reports.py  test_profile.py  test_publish_exam.py  test_publish_grades.py  test_question_flagging.py  test_rbac.py  test_schedule_exam.py  test_student_take_exam.py  test_student_view_results.py  test_two_factor_auth.py
(+38 files in other folders)
