[project]
name = "agile-demo"
version = "0.1.0"
description = "Teaching repo: Agile + Tests + CI/CD"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask_sqlalchemy>=3.1",
  "flask_migrate>=4.0",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "jinja2>=3.1",
  "werkzeug>=3.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.11",
  "httpx>=0.27",
  "hypothesis",
  "pytest-bdd",
  "fastapi",
  "uvicorn",
  "fastapi[testclient]",
  "types-Flask",
  "types-Flask-SQLAlchemy",
  "types-Flask-Migrate",
  "cryptography",
  "pytest-rich",
  "openpyxl",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]

addopts = """
    --disable-warnings
    --maxfail=1
    -vv
    -s
    --color=yes
    --tb=short
"""

# Allows rich output in GitHub Actions too
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
packages = ["src"]